--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="selectmap">Select map</string>
     <string name="setlocation">Set Location</string>
     <string name="prefmap">Set Preference</string>
+    <string name="map">Map</string>
+    <string name="list_name">List name</string>
+    <string name="list_desc">List description</string>
 </resources>
